sandbox/manifest/test-objects/test-objects.yaml
apiVersion: v1   
kind: Service
metadata:
  name: test-service
  namespace: default
spec:
  selector:
    app: test
  type: ClusterIP
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: test
    protocol: TCP
    port: 7388
    targetPort: 7388
 
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  test-deployment
  namespace: default
  labels:
    app: test
spec:
  minReadySeconds: 15
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: test
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: docker pull penpotapp/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort:  7388
          name: test
        volumeMounts:
        - name: test-volume
          mountPath: /home/app/config
          readOnly: true
      restartPolicy: Always
      imagePullSecrets:
      - name : etz-ecr
      volumes:
      - name: test-volume
        projected:
          sources:
          - configMap:
              name: test-configmap


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "server: hide";
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /test(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              name: test
